# API

./: .env.production  .gitignore  Dockerfile  GIT_SETUP.md  Makefile  docker-compose.yml  pyproject.toml
.do/: app.yaml
api/: main.py
api/apps/: __init__.py
api/apps/example/: __init__.py  app.py
api/shared/: __init__.py  config.py
deploy/: create-app.sh  create-droplet.sh  deploy.sh  mcguire-api.service  nginx.conf  setup.sh
tests/: test_example.py  test_main.py
